--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".RegisterActivity">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="0dp"
+    <ImageView
+        android:id="@+id/iv_profile_photo"
+        android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="16dp"
         android:src="@drawable/ic_account_circle"
@@ -24,9 +24,9 @@
         android:layout_marginHorizontal="63dp"
         android:layout_marginTop="48dp"
         android:hint="@string/text_name"
-        app:layout_constraintEnd_toEndOf="@id/iv_logo"
-        app:layout_constraintStart_toStartOf="@id/iv_logo"
-        app:layout_constraintTop_toBottomOf="@id/iv_logo">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_profile_photo">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_name"
