--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
-    <com.google.android.material.imageview.ShapeableImageView
+    <ImageView
         android:id="@+id/iv_logo"
-        android:layout_width="0dp"
+        android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="32dp"
         android:src="@drawable/ic_launcher_foreground"
@@ -24,8 +24,8 @@
         android:layout_marginHorizontal="63dp"
         android:layout_marginTop="64dp"
         android:hint="@string/text_email"
-        app:layout_constraintEnd_toEndOf="@id/iv_logo"
-        app:layout_constraintStart_toStartOf="@id/iv_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_logo">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -55,7 +55,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/bt_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
