--- a/app/src/main/res/layout/fragment_lessons.xml
+++ b/app/src/main/res/layout/fragment_lessons.xml
@@ -10,7 +10,8 @@
         android:id="@+id/user_photo"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_margin="32dp"
+        android:layout_marginVertical="26dp"
+        android:layout_marginHorizontal="41dp"
         android:src="@drawable/ic_account_circle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,7 +20,7 @@
         android:id="@+id/user_greetings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="31dp"
         android:text="Olá, Alessandro!"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -31,7 +32,7 @@
         android:id="@+id/user_core"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="38dp"
         android:text="100"
         android:textColor="@color/black"
         android:drawablePadding="8dp"
