--- a/app/src/main/res/layout/activity_finish_module.xml
+++ b/app/src/main/res/layout/activity_finish_module.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="Gabarito Módulo 1"
+        tools:text="Gabarito Módulo 1"
         android:textAllCaps="true"
         android:textColor="@color/black"
         android:textSize="24sp"
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="Você acertou 100% das questões"
+        tools:text="Você acertou 100% das questões"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,115 +33,62 @@
         app:layout_constraintTop_toBottomOf="@id/result_title" />
 
     <TextView
-        android:id="@+id/question1"
-        android:layout_width="match_parent"
+        android:id="@+id/score_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:layout_marginHorizontal="38dp"
-        android:layout_marginTop="24dp"
-        android:text="O que é a música?"
+        android:text="@string/lesson_score_text"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/percent_correct" />
 
     <TextView
-        android:id="@+id/your_answer1"
-        android:layout_width="0dp"
+        android:id="@+id/score_qtd"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sua resposta: Ritmo"
+        android:layout_marginStart="18dp"
+        android:drawablePadding="8dp"
+        tools:text="100"
         android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@id/question1"
-        app:layout_constraintStart_toStartOf="@id/question1"
-        app:layout_constraintTop_toBottomOf="@id/question1" />
+        android:textSize="16sp"
+        app:drawableStartCompat="@drawable/ic_lesson"
+        app:layout_constraintBottom_toBottomOf="@id/score_text"
+        app:layout_constraintStart_toEndOf="@id/score_text"
+        app:layout_constraintTop_toTopOf="@id/score_text" />
 
-    <TextView
-        android:id="@+id/correct_answer1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Resposta correta: A arte do som"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@id/question1"
-        app:layout_constraintStart_toStartOf="@id/question1"
-        app:layout_constraintTop_toBottomOf="@id/your_answer1" />
-
-    <TextView
-        android:id="@+id/question2"
+    <androidx.recyclerview.widget.RecyclerView
+        tools:itemCount="3"
+        tools:listitem="@layout/item_list_results"
+        android:id="@+id/recycler_result"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="38dp"
-        android:layout_marginTop="24dp"
-        android:text="O que é a música?"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/correct_answer1" />
+        android:layout_height="0dp"
+        android:layout_marginVertical="8dp"
+        app:layout_constraintTop_toBottomOf="@id/score_text"
+        app:layout_constraintBottom_toTopOf="@id/ready_to_next_module"/>
 
     <TextView
-        android:id="@+id/your_answer2"
+        android:id="@+id/ready_to_next_module"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Sua resposta: Ritmo"
+        android:layout_marginHorizontal="20sp"
+        android:layout_marginBottom="8dp"
+        tools:text="Você está pronto para o próximo módulo!"
         android:textColor="@color/black"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@id/question2"
-        app:layout_constraintStart_toStartOf="@id/question2"
-        app:layout_constraintTop_toBottomOf="@id/question2" />
-
-    <TextView
-        android:id="@+id/correct_answer2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Resposta correta: A arte do som"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@id/question2"
-        app:layout_constraintStart_toStartOf="@id/question2"
-        app:layout_constraintTop_toBottomOf="@id/your_answer2" />
-
-    <TextView
-        android:id="@+id/question3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="38dp"
-        android:layout_marginTop="24dp"
-        android:text="O que é a música?"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/correct_answer2" />
-
-    <TextView
-        android:id="@+id/your_answer3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Sua resposta: Ritmo"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@id/question3"
-        app:layout_constraintStart_toStartOf="@id/question3"
-        app:layout_constraintTop_toBottomOf="@id/question3" />
-
-    <TextView
-        android:id="@+id/correct_answer3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Resposta correta: A arte do som"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@id/question3"
-        app:layout_constraintStart_toStartOf="@id/question3"
-        app:layout_constraintTop_toBottomOf="@id/your_answer3" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bt_letsgo"/>
 
     <Button
         android:id="@+id/bt_letsgo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/lets_go"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
