--- a/app/src/main/res/layout/fragment_lessons.xml
+++ b/app/src/main/res/layout/fragment_lessons.xml
@@ -10,8 +10,8 @@
         android:id="@+id/user_photo"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginVertical="26dp"
         android:layout_marginHorizontal="41dp"
+        android:layout_marginVertical="26dp"
         android:src="@drawable/ic_account_circle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,27 +20,27 @@
         android:id="@+id/user_greetings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="31dp"
-        android:text="Olá, Alessandro!"
+        android:layout_marginStart="20dp"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/user_photo"
         app:layout_constraintStart_toEndOf="@id/user_photo"
-        app:layout_constraintTop_toTopOf="@id/user_photo" />
+        app:layout_constraintTop_toTopOf="@id/user_photo"
+        tools:text="Olá, Alessandro!" />
 
     <TextView
         android:id="@+id/user_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="38dp"
-        android:text="100"
-        android:textColor="@color/black"
+        android:layout_marginStart="20dp"
         android:drawablePadding="8dp"
-        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/user_greetings"
         app:layout_constraintStart_toEndOf="@id/user_greetings"
         app:layout_constraintTop_toTopOf="@id/user_greetings"
-        app:drawableStartCompat="@drawable/ic_lesson" />
+        tools:drawableStartCompat="@drawable/ic_lesson"
+        tools:text="100" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lesson_list"
