--- a/app/src/main/res/layout/fragment_lessons.xml
+++ b/app/src/main/res/layout/fragment_lessons.xml
@@ -12,7 +12,7 @@
         android:layout_height="50dp"
         android:layout_marginHorizontal="41dp"
         android:layout_marginVertical="26dp"
-        android:src="@drawable/ic_account_circle"
+        tools:src="@drawable/ic_account_circle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,8 +36,9 @@
         android:drawablePadding="8dp"
         android:textColor="@color/black"
         android:textSize="20sp"
+        android:layout_marginEnd="45dp"
         app:layout_constraintBottom_toBottomOf="@id/user_greetings"
-        app:layout_constraintStart_toEndOf="@id/user_greetings"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/user_greetings"
         tools:drawableStartCompat="@drawable/ic_lesson"
         tools:text="100" />
@@ -47,6 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
+        tools:listitem="@layout/item_list_module"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/user_photo" />
 
