--- a/app/src/main/res/layout/item_list_ranking.xml
+++ b/app/src/main/res/layout/item_list_ranking.xml
@@ -14,7 +14,7 @@
         android:layout_height="50dp"
         android:layout_marginVertical="17dp"
         android:layout_marginStart="8dp"
-        android:src="@drawable/ic_account_circle"
+        tools:src="@drawable/ic_account_circle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
