--- a/app/src/main/res/layout/fragment_figuras_three.xml
+++ b/app/src/main/res/layout/fragment_figuras_three.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.FigurasThreeFragment">
+    tools:context=".view.modulo2.FigurasThreeFragment">
 
     <TextView
         android:id="@+id/title"
