--- a/app/src/main/res/layout/fragment_figuras_two.xml
+++ b/app/src/main/res/layout/fragment_figuras_two.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.FigurasTwoFragment">
+    tools:context=".view.modulo2.FigurasTwoFragment">
 
     <TextView
         android:id="@+id/title"
