--- a/app/src/main/res/layout/fragment_graves_agudos.xml
+++ b/app/src/main/res/layout/fragment_graves_agudos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.GravesAgudosFragment">
+    tools:context=".view.modulo2.GravesAgudosFragment">
 
     <TextView
         android:id="@+id/title"
