--- a/app/src/main/res/layout/fragment_metronome_theory.xml
+++ b/app/src/main/res/layout/fragment_metronome_theory.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MetronomeTheoryFragment">
+    tools:context=".view.modulo1.MetronomeTheoryFragment">
 
     <TextView
         android:id="@+id/title"
